--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
       </div>
     </main>
 
-    <script type="text/javascript" src="js/obstacle.js"></script>
-    <script type="text/javascript" src="js/player.js"></script>
-    <script type="text/javascript" src="js/game.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="src/game.js"></script>
+    <script type="text/javascript" src="src/main.js"></script>
   </body>
 </html>
