--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <div id="game-container">
-        <div>
+        <div class="score">
           <h2>Stats</h2>
           <p>Score: <span id="score">0</span></p>
           <p>Lives: <span id="lives">3</span></p>
