--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <div id="game-container">
-        <div class="score">
+        <div class="">
           <h2>Stats</h2>
           <p>Score: <span id="score">0</span></p>
           <p>Lives: <span id="lives">3</span></p>
@@ -51,6 +51,8 @@
       </div>
     </main>
 
+    <script type="text/javascript" src="src/elements.js"></script>
+    <script type="text/javascript" src="src/player.js"></script>
     <script type="text/javascript" src="src/game.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
   </body>
