--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         <img src="./images/logo.png" alt="" class="logo-img" />
         <h1>Game Over</h1>
         <br />
-        <button id="restart-button">Restart</button>
+        <button class="restart-button">Restart</button>
       </div>
       <div id="game-end-win">
         <img src="./images/logo.png" alt="" class="logo-img" />
         <h1>Congradulations!</h1>
         <br />
         <h2>You Have Completed the game!</h2>
-        <button id="restart-button">Restart</button>
+        <button class="restart-button">Restart</button>
       </div>
     </main>
 
