Final with bizazz

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
       <div id="game-end-win">
         <img src="./images/logo.png" alt="" class="logo-img" />
-        <h1>Congradulations!</h1>
+        <h1>Congratulations!</h1>
         <br />
         <h2>You Have Completed the game!</h2>
         <button class="restart-button-win">Restart</button>
