--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <img src="./images/logo.png" alt="" class="logo-img" />
         <h1>Game Over</h1>
         <br />
+        <h1>You Can Try Again though</h1>
         <button class="restart-button">Restart</button>
       </div>
       <div id="game-end-win">
