Final with bizazz

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br />
 
         <p style="font-size: x-large; font-style: italic">
-          Use the up and down keys to kontrol your character and shoot with A,S
+          Use the up and down keys to control your character and shoot with A,S
           and D!
         </p>
         <div>
