Readme file added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </p>
         <button id="start-button">Start Game</button>
       </div>
+      <!-- #game-container is shown after start button is clicked-->
 
       <div id="game-container">
         <div class="">
@@ -44,11 +45,13 @@
         <div id="game-screen"></div>
       </div>
 
+      <!-- #game-end secreens is shown depending on the outline of the game-->
+
       <div id="game-end-loose">
         <img src="./images/logo.png" alt="" class="logo-img" />
         <h1>Game Over</h1>
         <br />
-        <h1>You Can Try Again though</h1>
+        <h1>You Can Try Again Though</h1>
         <button class="restart-button">Restart</button>
       </div>
       <div id="game-end-win">
